{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 98,
  "lineage": "c807fc26-c5a4-4cc3-f98c-3993a20f43c2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-04T21:03:54.601-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cypheron-api/global/firewalls/cypheron-allow-internal",
            "log_config": [],
            "name": "cypheron-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/cypheron-api/global/networks/cypheron-vpc",
            "priority": 500,
            "project": "cypheron-api",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cypheron-api/global/firewalls/cypheron-allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2025-08-04T21:03:54.701-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cypheron-api/global/firewalls/cypheron-deny-all-ingress",
            "log_config": [],
            "name": "cypheron-deny-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/cypheron-api/global/networks/cypheron-vpc",
            "priority": 1000,
            "project": "cypheron-api",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cypheron-api/global/firewalls/cypheron-deny-all-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "postgres_private_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.60.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-08-07T14:28:39.872-07:00",
            "id": "projects/cypheron-api/global/addresses/cypheron-postgres-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "cypheron-postgres-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/cypheron-api/global/networks/cypheron-vpc",
            "prefix_length": 16,
            "project": "cypheron-api",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cypheron-api/global/addresses/cypheron-postgres-ip"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cypheron-api/global/networks/cypheron-vpc",
            "mtu": 0,
            "name": "cypheron-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1259211395505601659",
            "project": "cypheron-api",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cypheron-api/global/networks/cypheron-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-04T21:03:55.599-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/cypheron-api/regions/us-central1/subnetworks/cypheron-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "cypheron-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/cypheron-api/global/networks/cypheron-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cypheron-api",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cypheron-api/regions/us-central1/subnetworks/cypheron-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}